force-app/main/default/objects/Attendee__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Attendee timezone</description>
    <label>Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>